# ExtremeViolenceOnSpace

./: .gitignore  Cargo.toml  README.md  _Cargo.toml  set_db.sh
Client/: Cargo.toml
Client/src/: bevy_ws.rs  components.rs  database.rs  input.rs  lib.rs  main.rs  net.rs  player.rs  screen.rs  sprites.rs  web_socket.rs  ws.rs
Server/: Cargo.toml
Server/src/: lib.rs
protospace/: Cargo.toml  build.rs
spacetime_client_sdk/: Cargo.toml
spacetime_client_sdk/src/: client_api.rs  errors.rs  lib.rs  messages.rs  network_manager.rs  pub_sub.rs  web_socket.rs  ws.rs
