[package]
name = "extreme_violence_spacetimedb_client"
version = "0.1.0"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
edition = "2021"
license = "MIT"

[dependencies]
spacetimedb = "0.3.1"
spacetime_client_sdk = {path = "../spacetime_client_sdk"}

# Remember to revert this before releasing your game!.
# If you remove the "dynamic" feature, your game executable can run standalone.
bevy = { version = "0.9.1", features = ["dynamic"] }

ggrs = { git = "https://github.com/gschup/ggrs", features=["sync-send"]}
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs" , features = ["wasm-bindgen"]}
bevy_asset_loader = "0.14.1"

async-compat = "0.2.1"
#crossbeam-channel = "0.5.6"


anyhow = "1.0.68"
base64 = "0.21.0"
crossbeam-channel = "0.5.6"
digest = "0.10.6"
futures = "0.3.25"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
hyper = "0.14.18"
log = "0.4.17"
#MUST match the version of protobuf-codegen-pure in protospace
protobuf = "2.28.0"
serde = "1.0.152"
serde_json = "1.0.91"
sha1 = "0.10.5"
sha3 = "0.10.0"
thiserror = "1.0.37"
tokio = { version = "1.24.1", default-features = false, features = ["macros", "net", "io-util", "sync", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tungstenite = { version = "0.18.0", default-features = false }
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }