[package]
name = "extreme_violence_spacetimedb_client"
version = "0.1.0"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
edition = "2021"
license = "MIT"

[dependencies]
spacetime_client_sdk = {path = "../spacetime_client_sdk"}

# Remember to revert this before releasing your game!.
# If you remove the "dynamic" feature, your game executable can run standalone.
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_asset_loader = { version = "0.14.1", features = ["2d"] }
log = "0.4.17"
matchbox_socket = { version = "0.5.0", features = ["ggrs-socket"] }
