[package]
name = "spacetime_client_sdk"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
spacetimedb = "0.3.1"

anyhow = "1.0.68"
crossbeam-channel = "0.5.6"
log = "0.4.17"
futures = "0.3.25"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.1", default-features = false, features = ["macros", "net", "io-util", "sync", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tungstenite = { version = "0.18.0", default-features = false }
hyper = "0.14.18"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
url = "2.3.1"
sha3 = "0.10.0"
sha1 = "0.10.5"
base64 = "0.21.0"
digest = "0.10.6"
